--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ChrisCodeX/Notes-TypeScript-Advanced-Types#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
